--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		</tr>
 		<tr>
 			<td class="w8">
-				Payload Data (optional, 0-65507 bits)<br>
+				Payload Data (optional, 0-65507 bytes)<br>
 				"<input type="text" id="icmp_data">"<br>
 				<span class="validation"></span>
 			</td>
@@ -121,9 +121,7 @@
 
 	<h1>Hex Output</h1>
 	<div id="output">
-		<div id="output_bin">
-			Aloha
-		</div>
+		<div id="output_bin"></div>
 		<span id="output_msg">
 			Click the container above to copy its contents.
 		</span>
