ad for the UDP calc

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
 	<h1 class="jumbo">
-		IPv4 & ICMP Echo (Ping) Request Packet Calculator<br>
+		IPv4 & ICMP Echo (Ping) Request Calculator<br>
 		<a href="https://github.com/michaelfm1211" class="footnote">
 			by michaelfm1211</a>
+		<p class="footnote">
+			Also see the accompanying
+			<a href="https://github.com/michaelfm1211/udp_calculator">
+				IPv4 & UDP Packet Calculator</a>
+		</p>
 	</h1>
 	<p class="footnote">
 		Note: these tables may not be to scale on your device. For
